# fb-video-downloader

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
facebook-video-downloader/src/fb_downloader/: fb_downloader.py
facebook-video-downloader/src/house_keeping/: house_keeper.py
facebook-video-downloader/src/main/: main.py
facebook-video-downloader/src/model/: video.py
facebook-video-downloader/src/regex/: fb_downloader_regex.py
src/config/: config.py
src/facebook_video_downloader/config/: config.py
src/facebook_video_downloader/demo/: demo.py
src/facebook_video_downloader/house_keeping/: house_keeper.py
src/facebook_video_downloader/main/: main.py
src/facebook_video_downloader/model/: video.py
src/facebook_video_downloader/video_downloader/: video_downloader.py
src/fb_downloader/: download_strategy.py  fb_downloader.py
src/house_keeping/: house_keeper.py
src/main/: main.py
src/model/: video.py
src/regex/: fb_downloader_regex.py
