[metadata]
name = fb-video-downloader-renanrgs
version = 0.0.9
author = Renan Silva
author_email = renan.rgsilva@gmail.com
description = Facebook Video Downloader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/renanrgs/fb-video-downloader

[options]
package_dir =
    = facebook-video-downloader
packages = find:
python_requires = >=3.10.4
install_requires =
    moviepy==1.0.3
    requests==2.27.1
    wget==3.2

[options.packages.find]
where = facebook-video-downloader